clusters/central-tx-atx-994/imdb/imdb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imdb
  namespace: imdb
  labels:
    app.kubernetes.io/name: imdb
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
       maxSurge: 1
       maxUnavailable: 1
  selector:
    matchLabels:
      app: imdb
  template:
    metadata:
      labels:
        app: imdb
      annotations:
        version: v-22-07-29-20-53-44
    spec:
      containers:
      - name: imdb
        image: ghcr.io/cse-labs/pib-imdb:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 400m
            memory: 128Mi
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
