clusters/central-tx-atx-994/imdb/imdb/ingressHttp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imdb
  namespace: imdb
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "false"
    kubernetes.io/ingress.class: contour

spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: imdb
            port:
              number: 8080
